Cascading Change Log

unreleased (wip 1.1)

  Added compression of object serialization and deserialization, on by default. This improves reliability
  of very large jobs with very large numbers of input files.

  Fixed bad cast of j.l.Error when caught in map/reduce pipeline stack.

  Added c.t.Fields#rename to simplify Fields instance manipulations.

  Added support for resultGroupFields in c.p.CoGroup. This allows the outgoig grouping fields to be set.

  Added c.t.h.BytesSerialization and c.t.h.BytesComparator to allow for c.t.Tuple instances
  to hold raw byte arrays (byte[]), and allow joining, grouping, and secondary sorting.

  Changed c.t.Tuple and underlying framework to support j.l.Object instead of j.l.Comparable. Note that
  Tuple#get() returns Comparable to maintain backwards compatibility.

  Added support for custom j.u.Comparator instances to control the grouping and sort orders in c.p.CoGroup and
  c.p.GroupBy via the c.t.Fields class.

  Added support for planner managed debugging levels via the c.o.DebugLevel enum. Now c.o.Debug operations
  can be planned out at runtime in the same manner as c.o.Assertion operations.

  Refactored xpath operations to re-use j.x.p.DocumentBuilder instances.

  Refactored fields resolver framework to emit consistent error messages across all field resolution types.

  Fixed bug where c.t.Tuples would fail when coercing non-standard java types or primitives.

  Fixed bug where c.t.Tap instances that returned true for #isWriteDirect() were not properly being initialized
  when used as a sink.

  Added guid like ID values to c.f.Flow and c.c.Cascade instances.

  Refactored reduce side grouping and co-grouping operations to remove redundant code calls.

  Added ability to capture Hadoop specific job details like task start and stop times, and all available counter values.

  Added accessor for increment counters on c.s.CascadingStats. This allows applications to pull aggregate counter